# xaotik

./: Cargo.toml  README.md  debug.txt  iwc.txt  todo.todo
examples/: ex1.rs
src/: float_bar_chart.rs  main.rs  tui_backend.rs  types.rs  ui.rs  util.rs
