[package]
name = "chaosninja"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
crossbeam = "0.8"
tui = { version = "0.16.0", default-features = false, features = ["crossterm"] }
crossterm = "0.22"
flume = "0.10.2"
netlink_wi = "0.3.0"